--- a/School-management-system/src/main/webapp/index.html
+++ b/School-management-system/src/main/webapp/index.html
@@ -128,6 +128,13 @@
           <span>Tables</span></a>
       </li>
 
+      <!-- Nav Item - Students Table -->
+      <li class="nav-item">
+        <a class="nav-link" href="students_table.html">
+          <i class="fas fa-fw fa-table"></i>
+          <span>Students Table</span></a>
+      </li>
+
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
 
@@ -334,7 +341,7 @@
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+            <a href="experiment.html" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
           </div>
 
           <!-- Content Row -->
